@@ -1,3 +1,9 @@
+drkns 23.08.2016 11:20:47 +0200 - build 201
+
+1. Не работал поиск в UTF8-файлах во вьювере.
+
+2. Там же - криво работал поиск по регулярным выражениям.
+
 drkns 22.08.2016 22:01:40 +0200
 
 1. GCC 6.
